[package]
name = "graphrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.27.0"
aws-config = "0.55.2"
tokio = { version ="1.28.0", features = ["full"] }
zip = "0.6.4"
bytes = "1.4.0"
polars = "0.28.0"
csv = "1.2.2"
